disruptor for parallel file reading and other improvements